[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Fonts/PermanentMarker-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/TitleScreenTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Misc/cross.png" type="Texture" id=3]
[ext_resource path="res://Scripts/OptionsScreen.gd" type="Script" id=4]
[ext_resource path="res://Assets/Misc/checkmark.png" type="Texture" id=5]
[ext_resource path="res://Assets/Misc/musicOff.png" type="Texture" id=6]
[ext_resource path="res://Assets/Misc/musicOn.png" type="Texture" id=7]
[ext_resource path="res://Assets/Misc/audioOff.png" type="Texture" id=8]
[ext_resource path="res://Assets/Misc/audioOn.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=10]
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
draw_center = false

[sub_resource type="StyleBoxFlat" id=19]
draw_center = false

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0745098, 0.0862745, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -151.5
margin_right = 151.5
margin_bottom = 72.0
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -43.0
margin_right = 56.0
margin_bottom = -12.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenuButton" type="Button" parent="MarginContainer3" groups=["Buttons"]]
margin_right = 111.0
margin_bottom = 31.0
mouse_default_cursor_shape = 2
text = "Back to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -55.0
margin_right = -20.0
margin_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 528.0
margin_bottom = 184.0
custom_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 203.0
margin_bottom = 184.0
size_flags_vertical = 5
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 148.0
margin_bottom = 45.0

[node name="EndlessModeButton" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer" groups=["Buttons"]]
margin_right = 148.0
margin_bottom = 25.0
rect_min_size = Vector2( 142, 0 )
hint_tooltip = "Run forever as
far as you can!"
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.364706, 0.364706, 0.364706, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_icons/radio_checked = ExtResource( 5 )
custom_icons/checked_disabled = ExtResource( 5 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked_disabled = ExtResource( 3 )
custom_icons/unchecked = ExtResource( 3 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Endless Mode"
align = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 148.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Beat the game to unlock!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 148.0
margin_bottom = 110.0

[node name="ReverseModeButton" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2" groups=["Buttons"]]
margin_right = 148.0
margin_bottom = 25.0
rect_min_size = Vector2( 142, 0 )
hint_tooltip = "Try running to the left! 
Can your brain handle it?"
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.364706, 0.364706, 0.364706, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_icons/checked_disabled = ExtResource( 5 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked_disabled = ExtResource( 3 )
custom_icons/unchecked = ExtResource( 3 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 19 )
custom_styles/hover_pressed = SubResource( 19 )
custom_styles/normal = SubResource( 19 )
text = "Reverse mode "
align = 1

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 29.0
margin_right = 148.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "beat the game to unlock!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 148.0
margin_bottom = 184.0

[node name="ParticleEffectsButton" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3" groups=["Buttons"]]
margin_right = 148.0
margin_bottom = 25.0
rect_min_size = Vector2( 142, 0 )
hint_tooltip = "The rain effect.
Turn it off if you don't like it
or if it hinders framerate."
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.364706, 0.364706, 0.364706, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_icons/checked_disabled = ExtResource( 5 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked_disabled = ExtResource( 3 )
custom_icons/unchecked = ExtResource( 3 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 19 )
custom_styles/hover_pressed = SubResource( 19 )
custom_styles/normal = SubResource( 19 )
text = "Particle Effets"
align = 1

[node name="DashEffectButton" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3" groups=["Buttons"]]
margin_top = 29.0
margin_right = 148.0
margin_bottom = 54.0
rect_min_size = Vector2( 142, 0 )
hint_tooltip = "Trail effect when running very fast."
mouse_default_cursor_shape = 2
size_flags_horizontal = 5
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.364706, 0.364706, 0.364706, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_icons/checked_disabled = ExtResource( 5 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked_disabled = ExtResource( 3 )
custom_icons/unchecked = ExtResource( 3 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 19 )
custom_styles/hover_pressed = SubResource( 19 )
custom_styles/normal = SubResource( 19 )
text = "Trail Effect"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 303.0
margin_right = 473.0
margin_bottom = 184.0
size_flags_vertical = 3
custom_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 170.0
margin_bottom = 25.0
custom_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 25.0
margin_bottom = 25.0
size_flags_vertical = 0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="SoundVolume" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 25.0
margin_right = 145.0
margin_bottom = 25.0
rect_min_size = Vector2( 120, 25 )
mouse_default_cursor_shape = 2
min_value = -20.0
max_value = 20.0
step = 5.0
tick_count = 9
ticks_on_borders = true

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 145.0
margin_right = 170.0
margin_bottom = 25.0
size_flags_vertical = 0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 55.0
margin_right = 170.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 25.0
margin_bottom = 25.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="MusicVolume" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 25.0
margin_right = 145.0
margin_bottom = 25.0
rect_min_size = Vector2( 120, 0 )
mouse_default_cursor_shape = 2
size_flags_vertical = 1
min_value = -20.0
max_value = 20.0
step = 5.0
tick_count = 9
ticks_on_borders = true

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 145.0
margin_right = 170.0
margin_bottom = 25.0
texture = ExtResource( 7 )
stretch_mode = 4

[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/SoundVolume" to="." method="_on_SoundVolume_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
